<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <GVL Name="GVL_MX41" Id="{0a0a28c4-7637-405f-943c-87838dabcd76}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
																					
(*Mätvärden*)											
_I1 				AT%MB300			:REAL;			(*Ström i Ampere fas 1, adr 3000*)
_I2					AT%MB304			:REAL;			(*Ström i Ampere fas 2, adr 3002*)
_I3					AT%MB308			:REAL;			(*Ström i Ampere fas 3, adr 3004*)
					
_U1_U2				AT%MB312			:REAL;			(*Spänning L1-L2 i Volt, adr 3020*)
_U2_U3				AT%MB316			:REAL;			(*Spänning L2-L3 i Volt, adr 3022*)
_U3_U1				AT%MB320			:REAL;			(*Spänning L3-L1  i Volt, adr 3024*)
					
_U1_N				AT%MB324			:REAL;			(*Spänning L1-N i Volt, adr 3020*)
_U2_N				AT%MB328			:REAL;			(*Spänning L3-N i Volt, adr 3022*)
_U3_N				AT%MB332			:REAL;			(*Spänning L2-N i Volt, adr 3024*)
					
_P1					AT%MB336			:REAL;			(*Effekt fas 1 i kW, adr 3054*)
_P2					AT%MB340			:REAL;			(*Effekt fas 2 i kW, adr 3056*)
_P3					AT%MB344			:REAL;			(*Effekt fas 3 i kW, adr 3058*)
					
_P					AT%MB348			:REAL;			(*Total aktiv effekt i kW, adr 3060*)
_PVAR				AT%MB352			:REAL;			(*Total reaktiv effekt i kVAR, adr 3068*)
_PVA				AT%MB356			:REAL;			(*Total apparent effekt i kVA, adr 3076*)
					
_Pfa				AT%MB360			:REAL;			(*Effektfaktor , adr 3084*)
					
_HZ					AT%MB364			:REAL;			(*Effektfaktor , adr 3110*)
					
_WHAI				AT%MB368			:REAL;			(*Total aktiv energi import i Wh, adr 3204*)
_WHAE				AT%MB372			:REAL;			(*Total aktiv energi export i Wh, adr 3208*)
_VARHI				AT%MB376			:REAL;			(*Total reaktiv energi import i VARh, adr 3220*)
_VARHE				AT%MB380			:REAL;			(*Total reaktiv energi export i VARh, adr 3224*)
					
_WHPAI				AT%MB384			:REAL;			(*Partial aktiv energi import i Wh, adr 3256*)
_WHPAE				AT%MB388			:REAL;			(*Partial reaktiv energi import i Wh, adr 3272*)
					
_WHAEI1				AT%MB392			:REAL;			(*Aktiv energi import i Wh fas 1, adr 3518*)
_WHAEI2				AT%MB396			:REAL;			(*Aktiv energi import i Wh fas 2, adr 3522*)
_WHAEI3				AT%MB400			:REAL;			(*Aktiv energi import i Wh fas 3, adr 3526*)
					

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>