<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <POU Name="iEM3255_Logg" Id="{8ebe9c49-000a-4622-ae26-f44e17849809}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM iEM3255_Logg
VAR
	
	fbLogg1 		:FB_SaveToCSV_Schneider;
	tUpdateTime1	:TIME:=T#5S;
	sFileName1		:STRING(255):='Schneider1';
	
	fbLogg2 		:FB_SaveToCSV_Schneider;
	tUpdateTime2	:TIME:=T#5S;
	sFileName2		:STRING(255):='Schneider2';
	
	fbLogg3 		:FB_SaveToCSV_Schneider;
	tUpdateTime3	:TIME:=T#5S;
	sFileName3		:STRING(255):='Schneider3';
	
	fbLogg4 		:FB_SaveToCSV_Schneider;
	tUpdateTime4	:TIME:=T#5S;
	sFileName4		:STRING(255):='Schneider4';

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbLogg1(
	bChangeSeparatorToComma:= FALSE, 
	bExecute:= GVL_Fastighet.CSVEnergyMeter, 
	tUpdateTime:= tUpdateTime1, 
	sFileName:= sFileName1, 
	nDayOfWeek:= PLC_TID.fbTime.systemTime.wDayOfWeek,
	sColumn1TimeStamp:= PLC_TID.systemTime, 
	sColumn2:= REAL_TO_STRING(GVL_MX41._I1), 
	sColumn3:= REAL_TO_STRING(GVL_MX41._I2), 
	sColumn4:= REAL_TO_STRING(GVL_MX41._I3), 
	sColumn5:= REAL_TO_STRING(GVL_MX41._U1_U2), 
	sColumn6:= REAL_TO_STRING(GVL_MX41._U2_U3), 
	sColumn7:= REAL_TO_STRING(GVL_MX41._U3_U1));
	
fbLogg2(
	bChangeSeparatorToComma:= FALSE, 
	bExecute:= GVL_Fastighet.CSVEnergyMeter, 
	tUpdateTime:= tUpdateTime2, 
	sFileName:= sFileName2, 
	nDayOfWeek:= PLC_TID.fbTime.systemTime.wDayOfWeek,
	sColumn1TimeStamp:= PLC_TID.systemTime, 
	sColumn2:= REAL_TO_STRING(GVL_MX41._P1), 
	sColumn3:= REAL_TO_STRING(GVL_MX41._P2), 
	sColumn4:= REAL_TO_STRING(GVL_MX41._P3), 
	sColumn5:= REAL_TO_STRING(GVL_MX41._PVAR), 
	sColumn6:= REAL_TO_STRING(GVL_MX41._PVA), 
	sColumn7:= REAL_TO_STRING(GVL_MX41._Pfa));
	
fbLogg3(
	bChangeSeparatorToComma:= FALSE, 
	bExecute:= GVL_Fastighet.CSVEnergyMeter, 
	tUpdateTime:= tUpdateTime3, 
	sFileName:= sFileName3, 
	nDayOfWeek:= PLC_TID.fbTime.systemTime.wDayOfWeek,
	sColumn1TimeStamp:= PLC_TID.systemTime, 
	sColumn2:= REAL_TO_STRING(GVL_MX41._HZ), 
	sColumn3:= REAL_TO_STRING(GVL_MX41._WHAI), 
	sColumn4:= REAL_TO_STRING(GVL_MX41._WHAE), 
	sColumn5:= REAL_TO_STRING(GVL_MX41._VARHI), 
	sColumn6:= REAL_TO_STRING(GVL_MX41._VARHE), 
	sColumn7:= REAL_TO_STRING(GVL_MX41._WHPAI));
	
fbLogg4(
	bChangeSeparatorToComma:= FALSE, 
	bExecute:= GVL_Fastighet.CSVEnergyMeter, 
	tUpdateTime:= tUpdateTime4, 
	sFileName:= sFileName4, 
	nDayOfWeek:= PLC_TID.fbTime.systemTime.wDayOfWeek,
	sColumn1TimeStamp:= PLC_TID.systemTime, 
	sColumn2:= REAL_TO_STRING(GVL_MX41._WHPAE), 
	sColumn3:= REAL_TO_STRING(GVL_MX41._WHAEI1), 
	sColumn4:= REAL_TO_STRING(GVL_MX41._WHAEI2), 
	sColumn5:= REAL_TO_STRING(GVL_MX41._WHAEI3),
	sColumn6:= REAL_TO_STRING(GVL_MX41._P)); ]]></ST>
    </Implementation>
    <LineIds Name="iEM3255_Logg">
      <LineId Id="6" Count="10" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="13" />
      <LineId Id="64" Count="0" />
      <LineId Id="51" Count="12" />
      <LineId Id="75" Count="11" />
      <LineId Id="113" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>